@@ -1,5 +1,7 @@
 March 2021 7.5
   - PHP 7.2 required
+  - LAM Pro:
+   -> Self registration: support binary attributes (e.g. for jpegPhoto)
 
 
 06.12.2020 7.4
